1. Fixed toast issue on uploading a resource
2. added a horizontal transform on the card titles that may be truncated

--- a/sass/_style.scss
+++ b/sass/_style.scss
@@ -94,6 +94,18 @@ h5 > span {
 .name, .card-title {
     text-transform: capitalize;//Always capitalize this class
 }
+
+[class*="-title"].truncate {
+    will-change: text-align;
+}
+
+[class*="-title"].truncate:hover {
+    text-indent: -100%;
+    text-align: right !Important;
+    transition-timing-function: cubic-bezier(0, 0, 0.53, 0.99);
+    transition-duration: 1.7s;
+}
+
 .name {
     text-shadow: 0px 3px 5px rgba(0, 0, 0, 0.37);
 }
